# memory-quality-mcp

./: .gitignore  BUILD_PLAN.md  CHANGELOG.md  CLAUDE_CODE_INTERNALS.md  DESIGN.md  ISSUES.md  LAUNCH_POSTS.md  METRICS.md  PROJECT_STATUS.md  README.md  README_CN.md  config.yaml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  wrong_score.md
benchmark/: DATA_SELECTION_PROMPT.md  DATA_SELECTION_PROMPT_V2.md  EVALUATION_REPORT.md  README.md  SAMPLING_PROMPT.md  STATUS.md  convert_to_scenarios.py  dataset.json  filter_type_a.py  run_benchmark_scores.py
examples/demo_memories/: MEMORY.md  code_commenting_preference.md  code_commenting_style.md  explanation_approach_preference.md  project_retail_inventory_analysis.md  step2_memory_reading_development.md  user_background.md  user_communication_preference.md  user_dietary_preferences.md  user_expertise_level.md  writing_style_feedback.md
scripts/: generate_memories.py  seed_memories.py  test_live.py
skills/.claude-plugin/: marketplace.json  plugin.json
skills/hooks/: hooks.json
skills/skills/memory-quality/: SKILL.md
skills/skills/memory-quality/references/: commands.md
skills/skills/memory-quality/scripts/: memory_quality.py
src/: config.py  dashboard.py  i18n.py  memory_reader.py  memory_writer.py  prompts.py  quality_engine.py  server.py  session_store.py
src/templates/: dashboard_en.html  dashboard_zh.html
tests/: test_memory_reader.py  test_quality_engine.py  test_session_store.py  test_step4.py
